--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,76 +1,76 @@
 {
     "starting-page-download-version": "Download Version",
-    "download": "Download",
-    "universaldatatool-description": "Open-Source Data Labeling",
-    "new-file": "New File",
-    "start-from-template": "Start from Template",
-    "open-file": "Open File",
-    "open-collabrative-session": "Open Collaborative Session",
-    "add-authentication": "Add Authentification",
-    "no-recent-files": "No Recent Files",
-    "downloading-and-installing-udt": "Downloading and Installing UDT",
-    "labelling-images": "Labeling Images",
-    "repository": "Repository",
-    "start-page-about-first-paragraph": "The Universal Data Tool (UDT) is an open-source web or downloadable tool for labeling data for usage in machine learning or data processing systems.",
-    "start-page-about-second-paragraph": "The Universal Data Tool supports Computer Vision, Natural Language Processing (including Named Entity Recognition and Audio Transcription) workflows.",
-    "the-udt-uses-an": "The UDT uses an",
-    "start-page-about-third-paragraph": "that can be easily read by programs as a ground-truth dataset for machine learning algorithms.",
-    "open-a-template": "Open a template",
-    "to-see-how-the-udt-could-work-for-your-data": "to see how the UDT could work for your data.",
+    "Download": "Download",
+    "Open-Source Data Labeling": "Open-Source Data Labeling",
+    "New File": "New File",
+    "Start from Template": "Start from Template",
+    "Open File": "Open File",
+    "Open Collaborative Session": "Open Collaborative Session",
+    "Add Authentification": "Add Authentification",
+    "No Recent Files": "No Recent Files",
+    "Downloading and Installing UDT": "Downloading and Installing UDT",
+    "Labeling Images": "Labeling Images",
+    "Repository": "Repository",
+    "The Universal Data Tool (UDT) is an open-source web or downloadable tool for labeling data for usage in machine learning or data processing systems.": "The Universal Data Tool (UDT) is an open-source web or downloadable tool for labeling data for usage in machine learning or data processing systems.",
+    "The Universal Data Tool supports Computer Vision, Natural Language Processing (including Named Entity Recognition and Audio Transcription) workflows.": "The Universal Data Tool supports Computer Vision, Natural Language Processing (including Named Entity Recognition and Audio Transcription) workflows.",
+    "The UDT uses an": "The UDT uses an",
+    "that can be easily read by programs as a ground-truth dataset for machine learning algorithms.": "that can be easily read by programs as a ground-truth dataset for machine learning algorithms.",
+    "Open a template": "Open a template",
+    "to see how the UDT could work for your data.": "to see how the UDT could work for your data.",
     "edit-json": "Edit JSON",
-    "clear-labels": "Clear All Labels",
-    "telemetry": "Telemetry",
-    "custom-collobration-server": "Custom Collaboration Server",
-    "label-help": "Label Help",
-    "label-help-api-key": "Label Help API Key",
-    "an-error-has-occured": "An error has occurred",
-    "sample-brushes": "Sample Brushes",
-    "complete": "Complete",
-    "review": "Review",
-    "collobrate": "Collaborate",
-    "join-a-session": "Join a Session",
-    "leave-session": "Leave Session",
-    "next": "Next",
-    "configure-3d-explanation-text-part-1": "Hey, this isn't currently available, but if you'd like this functionality please let us know by leaving a thumbs up on",
-    "github-issue": "github issue",
-    "add-new-field": "Add New Field",
-    "remove-field": "Remove Field",
-    "preview": "Preview",
-    "add-input": "Add Input",
-    "text-input": "Text Input",
-    "exclusive-choice": "Exclusive Choice",
-    "drop-down-autocomplete": "Dropdown / Autocomplete",
-    "multiple-item-dropdown-autocomplete": "Multiple Item Dropdown / Autocomplete",
-    "download-urls-dialog": "This transformation will download all the urls from your samples to your computer, and change the paths to filenames. This is usually not a good idea if you're collaborating with others, but is very useful if you're about to build a model.",
-    "no-recent-items": "No Recent Items",
-    "explore-more": "Explore More",
-    "reopen-google-drive-picker": "Reopen Google Drive Picker",
-    "import-from-google-drive-explanation-text": "Make sure your Google Drive files are available via a link",
-    "import-from-google-drive-explanation-bold-text": "If you don't, the files will not appear when you're labeling",
-    "select-video-quality": "Select Video Quality",
-    "desktop-only": "Desktop Only",
-    "auth-must-be-configured": "Auth Must Be Configured",
-    "must-be-signed-in": "Must Be Signed In",
-    "paste-urls": "Paste URLs",
-    "files-from-directory": "Files from Directory",
-    "import-text-snippets": "Import Text Snippets",
-    "import-toy-dataset": "Import Toy Dataset",
-    "import-from": "Import from",
-    "name": "Name",
-    "type": "Type",
-    "size": "Size",
-    "actions": "Actions",
-    "import": "Import",
-    "sign-in": "Sign in",
-    "complete-sign-up": "Complete Sign Up",
-    "complete-your-sign-up": "Complete your Sign Up",
-    "transform-local-files-to-web-urls-explanation": "This transformation will upload your local samples to the cloud Note: This can take a little while.",
-    "convert-video-keyframes-to-samples": "Convert Video Keyframes to Samples",
-    "transform-local-files-to-web-urls": "Transform Local Files to Web URLs",
-    "convert-video-frames-to-images": "Convert Video Frames to Images",
-    "transform-video-frames-to-images-dialog-explanation-text": "This transformation will convert samples that reference a video frame into an image. This is a useful step before creating a model. You can only convert videos that are downloaded on your computer. Note: This can take a little while.",
-    "transform-video-keyframes-dialog-explanation-text": "This operation will convert keyframes set on a video into individual image segmentation frames. Your interface type will change from 'video_segmentation' into 'image_segmentation'. This is sometimes helpful when preparing video data for a computer vision model.",
-    "transform-video-keyframes-dialog-explanation-warning": "You need to label some keyframes to use this.",
-    "universal-data-viewer-warning": "This interface hasn't been set up properly, try selecting an interface in the 'Setup' tab.",
-    "setup-project": "Setup Project"
+    "Clear All Labels": "Clear All Labels",
+    "Telemetry": "Telemetry",
+    "Custom Collaboration Server": "Custom Collaboration Server",
+    "Label Help": "Label Help",
+    "Label Help API Key": "Label Help API Key",
+    "An error has occurred": "An error has occurred",
+    "Sample Brushes": "Sample Brushes",
+    "Complete": "Complete",
+    "Review": "Review",
+    "Collaborate": "Collaborate",
+    "Join a Session": "Join a Session",
+    "Leave Session": "Leave Session",
+    "Next": "Next",
+    "Hey, this isn't currently available, but if you'd like this functionality please let us know by leaving a thumbs up on": "Hey, this isn't currently available, but if you'd like this functionality please let us know by leaving a thumbs up on",
+    "Github issue": "Github issue",
+    "Add New Field": "Add New Field",
+    "Remove Field": "Remove Field",
+    "Preview": "Preview",
+    "Add Input": "Add Input",
+    "Text Input": "Text Input",
+    "Exclusive Choice": "Exclusive Choice",
+    "Dropdown / Autocomplete": "Dropdown / Autocomplete",
+    "Multiple Item Dropdown / Autocomplete": "Multiple Item Dropdown / Autocomplete",
+    "This transformation will download all the urls from your samples to your computer, and change the paths to filenames. This is usually not a good idea if you're collaborating with others, but is very useful if you're about to build a model.": "This transformation will download all the urls from your samples to your computer, and change the paths to filenames. This is usually not a good idea if you're collaborating with others, but is very useful if you're about to build a model.",
+    "No Recent Items": "No Recent Items",
+    "Explore More": "Explore More",
+    "Reopen Google Drive Picker": "Reopen Google Drive Picker",
+    "Make sure your Google Drive files are available via a link": "Make sure your Google Drive files are available via a link",
+    "If you don't, the files will not appear when you're labeling": "If you don't, the files will not appear when you're labeling",
+    "Select Video Quality": "Select Video Quality",
+    "Desktop Only": "Desktop Only",
+    "Auth Must Be Configured": "Auth Must Be Configured",
+    "Must Be Signed In": "Must Be Signed In",
+    "Paste URLs": "Paste URLs",
+    "Files from Directory": "Files from Directory",
+    "Import Text Snippets": "Import Text Snippets",
+    "Import Toy Dataset": "Import Toy Dataset",
+    "Import from": "Import from",
+    "Name": "Name",
+    "Type": "Type",
+    "Size": "Size",
+    "Actions": "Actions",
+    "Import": "Import",
+    "Sign in": "Sign in",
+    "Complete Sign Up": "Complete Sign Up",
+    "Complete your Sign Up": "Complete your Sign Up",
+    "This transformation will upload your local samples to the cloud Note: This can take a little while.": "This transformation will upload your local samples to the cloud Note: This can take a little while.",
+    "Convert Video Keyframes to Samples": "Convert Video Keyframes to Samples",
+    "Transform Local Files to Web URLs": "Transform Local Files to Web URLs",
+    "Convert Video Frames to Images": "Convert Video Frames to Images",
+    "This transformation will convert samples that reference a video frame into an image. This is a useful step before creating a model. You can only convert videos that are downloaded on your computer. Note: This can take a little while.": "This transformation will convert samples that reference a video frame into an image. This is a useful step before creating a model. You can only convert videos that are downloaded on your computer. Note: This can take a little while.",
+    "This operation will convert keyframes set on a video into individual image segmentation frames. Your interface type will change from 'video_segmentation' into 'image_segmentation'. This is sometimes helpful when preparing video data for a computer vision model.": "This operation will convert keyframes set on a video into individual image segmentation frames. Your interface type will change from 'video_segmentation' into 'image_segmentation'. This is sometimes helpful when preparing video data for a computer vision model.",
+    "You need to label some keyframes to use this.": "You need to label some keyframes to use this.",
+    "This interface hasn't been set up properly, try selecting an interface in the 'Setup' tab.": "This interface hasn't been set up properly, try selecting an interface in the 'Setup' tab.",
+    "Setup Project": "Setup Project"
 }
