:globe_with_meridians: Adds dutch translation
- Adds a dutch translation.
- Converts static Create Course text to translated text.
- Translated "Create Course" text in all supported languages.

--- a/src/i18n/locales/cn/translations.json
+++ b/src/i18n/locales/cn/translations.json
@@ -7,6 +7,7 @@
   "open-file": "打开文件",
   "open-collaborative-session": "公开合作会议",
   "add-authentication": "添加认证",
+  "create-training-course": "创建培训课程",
   "no-recent-files": "最近没有文件",
   "downloading-and-installing-udt": "下载和安装UDT",
   "labeling-images": "标签图片",
