--- a/src/i18n/locales/en/translation.json
+++ b/src/i18n/locales/en/translation.json
@@ -9,6 +9,7 @@
   "open-file": "Open File",
   "open-collaborative-session": "Open Collaborative Session",
   "add-authentication": "Add Authentification",
+  "create-training-course": "Create a Training Course",
   "no-recent-files": "No Recent Files",
   "downloading-and-installing-udt": "Downloading and Installing UDT",
   "labeling-images": "Labeling Images",
