--- a/src/i18n/locales/fr/translations.json
+++ b/src/i18n/locales/fr/translations.json
@@ -7,6 +7,7 @@
   "open-file": "Dossier public",
   "open-collaborative-session": "Session de collaboration ouverte",
   "add-authentication": "Ajouter l'authentification",
+  "create-training-course": "Créer un cours de formation",
   "no-recent-files": "Aucun dossier récent",
   "downloading-and-installing-udt": "Téléchargement et installation d'UDT",
   "labeling-images": "Étiquetage des images",
