--- a/src/i18n/locales/pt-br/translation.json
+++ b/src/i18n/locales/pt-br/translation.json
@@ -1,60 +1,60 @@
 {
-  "starting-page-download-version": "Baixar Versï¿½o",
+  "starting-page-download-version": "Baixar Versão",
   "download": "Baixar",
   "download-json": "Baixar JSON",
   "download-csv": "Baixar CSV",
-  "universaldatatool-description": "Rotulador de dados de cï¿½digo aberto",
+  "universaldatatool-description": "Rotulador de dados de código aberto",
   "new-file": "Novo arquivo",
   "start-from-template": "Iniciar apartir de um modelo",
   "open-file": "Abrir arquivo",
-  "open-collaborative-session": "Abrir sessï¿½o colaborativa",
-  "add-authentication": "Adicionar autenticaï¿½ï¿½o",
+  "open-collaborative-session": "Abrir sessão colaborativa",
+  "add-authentication": "Adicionar autenticação",
   "create-training-course": "Criar um curso de treinamento",
   "no-recent-files": "Sem arquivos recentes",
   "downloading-and-installing-udt": "Baixando e instalando o UDT",
   "labeling-images": "Rotulando imagens",
-  "start-page-about-first-paragraph": "O Universal Data Tool (UDT) ï¿½ uma ferramenta web ou baixï¿½vel de cï¿½digo aberto para rotulaï¿½ï¿½o de dados para uso em aprendizado de mï¿½quina ou em processamento de sistemas.",
-  "start-page-about-second-paragraph": "O Universal Data Tool tem suporte para visï¿½o computacional, fluxo de trabalho para processamento de linguagem natural (incluindo reconhecimento de entidade nomeada e transcriï¿½ï¿½o de audio).",
+  "start-page-about-first-paragraph": "O Universal Data Tool (UDT) é uma ferramenta web ou baixável de código aberto para rotulação de dados para uso em aprendizado de máquina ou em processamento de sistemas.",
+  "start-page-about-second-paragraph": "O Universal Data Tool tem suporte para visão computacional, fluxo de trabalho para processamento de linguagem natural (incluindo reconhecimento de entidade nomeada e transcrição de audio).",
   "the-udt-uses-an": "O UDT usa uma",
-  "start-page-about-third-paragraph": "que pode ser facilmente lido por programas como um conjunto de dados verdadeiros para algoritmos de aprendizado de mï¿½quina.",
+  "start-page-about-third-paragraph": "que pode ser facilmente lido por programas como um conjunto de dados verdadeiros para algoritmos de aprendizado de máquina.",
   "open-a-template": "Abrir um modelo",
   "to-see-how-the-udt-could-work-for-your-data": "para ver como o UDT pode trabalhar com seus dados.",
   "edit-json": "Editar JSON",
-  "clear-labels": "Limpar todos os rï¿½tulos",
+  "clear-labels": "Limpar todos os rótulos",
   "telemetry": "Telemetria",
-  "custom-collaboration-server": "Servidor de colaboraï¿½ï¿½o personalizado",
-  "label-help": "Ajuda com Rï¿½tulo",
-  "label-help-api-key": "Ajudo com a chave da API do rï¿½tulo",
+  "custom-collaboration-server": "Servidor de colaboração personalizado",
+  "label-help": "Ajuda com Rótulo",
+  "label-help-api-key": "Ajudo com a chave da API do rótulo",
   "an-error-has-occurred": "Ocorreu um erro",
-  "sample-brushes": "Pincï¿½is de amostra",
+  "sample-brushes": "Pincéis de amostra",
   "complete": "Completo",
   "review": "Revisar",
   "collaborate": "Colaborar",
-  "join-a-session": "Entrar em uma sessï¿½o",
-  "leave-session": "Sair da sessï¿½o",
-  "next": "Prï¿½ximo",
-  "configure-3d-explanation-text-part-1": "Ei, isso ainda nï¿½o estï¿½ disponï¿½vel, mas se vocï¿½ gostaria dessa funcionalidade for favor deixe nos saber deixando um gostei",
-  "github-issue": "Questï¿½o no GitHub",
+  "join-a-session": "Entrar em uma sessão",
+  "leave-session": "Sair da sessão",
+  "next": "Próximo",
+  "configure-3d-explanation-text-part-1": "Ei, isso ainda não está disponível, mas se você gostaria dessa funcionalidade for favor deixe nos saber deixando um gostei",
+  "github-issue": "Questão no GitHub",
   "add-new-field": "Adicionar novo campo",
   "remove-field": "Remover campo",
-  "preview": "Prï¿½-visualizar",
+  "preview": "Pré-visualizar",
   "add-input": "Adicionar entrada",
   "text-input": "Texto de entrada",
   "exclusive-choice": "Escolha exclusiva",
   "drop-down-autocomplete": "Drop-down / Auto completar",
-  "multiple-item-dropdown-autocomplete": "Drop-down vï¿½rios itens / Auto completar",
-  "download-urls-dialog": "Essa transformaï¿½ï¿½o irï¿½ baixar todas urls de sua amostra para seu computador e muda o caminho de arquivos para nome de arquivo. Geralmente essa nï¿½o ï¿½ uma boa ideia caso vocï¿½ queria trabalhar em colaboraï¿½ï¿½o com outras pessoas, mas isso serï¿½ muito ï¿½til se vocï¿½ quiser construir um modelo.",
+  "multiple-item-dropdown-autocomplete": "Drop-down vários itens / Auto completar",
+  "download-urls-dialog": "Essa transformação irá baixar todas urls de sua amostra para seu computador e muda o caminho de arquivos para nome de arquivo. Geralmente essa não é uma boa ideia caso você queria trabalhar em colaboração com outras pessoas, mas isso será muito útil se você quiser construir um modelo.",
   "no-recent-items": "Sem itens recentes",
   "explore-more": "Explorar mais",
   "reopen-google-drive-picker": "Reabrir selecionador do Google drive",
-  "import-from-google-drive-explanation-text": "Tenha certeza que seus arquivos do google drive estï¿½o vï¿½lidos atravï¿½s do link",
-  "import-from-google-drive-explanation-bold-text": "Se vocï¿½ achar melhor nï¿½o, os arquivos nï¿½o irï¿½o desaparecer quanto vocï¿½ fizer a rotulaï¿½ï¿½o",
+  "import-from-google-drive-explanation-text": "Tenha certeza que seus arquivos do google drive estão válidos através do link",
+  "import-from-google-drive-explanation-bold-text": "Se você achar melhor não, os arquivos não irão desaparecer quanto você fizer a rotulação",
   "select-video-quality": "Selecione a qualidade de video",
   "desktop-only": "Apenas para desktop",
-  "auth-must-be-configured": "Autenticaï¿½ï¿½o precisa ser configurada",
+  "auth-must-be-configured": "Autenticação precisa ser configurada",
   "must-be-signed-in": "Precisa estar logado",
   "paste-urls": "Colar URLs",
-  "files-from-directory": "Arquivos de diretï¿½rio",
+  "files-from-directory": "Arquivos de diretório",
   "import-text-snippets": "Importar trechos de texto",
   "import-toy-dataset": "Importar conjunto de dados de brinquedo",
   "import-from": "Importar de",
@@ -64,18 +64,18 @@
   "name": "Nome",
   "type": "Tipo",
   "size": "Tamanho",
-  "actions": "Aï¿½ï¿½es",
+  "actions": "Ações",
   "import": "Importar",
   "sign-in": "Cadastrar",
   "complete-sign-up": "Completar cadastro",
   "complete-your-sign-up": "Complete seu cadastro",
-  "transform-local-files-to-web-urls-explanation": "Essa transformaï¿½ï¿½o irï¿½ enviar suas amostras locais para a nuvem. Aviso: Isso pode demorar um pouco.",
+  "transform-local-files-to-web-urls-explanation": "Essa transformação irá enviar suas amostras locais para a nuvem. Aviso: Isso pode demorar um pouco.",
   "convert-video-keyframes-to-samples": "Converter frames de video em amostras",
   "transform-local-files-to-web-urls": "Transformar arquivos locais em web URLs",
   "convert-video-frames-to-images": "Converter frames de video em imagens",
-  "transform-video-frames-to-images-dialog-explanation-text": "Essa trnasformaï¿½ï¿½o irï¿½ converter suas amostras que referenciam um frame de video em uma imagem. Isso pode ser ï¿½til para alguns passos anteriores ï¿½ criaï¿½ï¿½o de modelo. Vocï¿½ pode apenas converter videos que estï¿½o baixados em seu computador. Aviso: Isso pode demorar um pouco.",
-  "transform-video-keyframes-dialog-explanation-text": "Essa operaï¿½ï¿½o irï¿½ converter os frames do video em uma imagem individual segmentada em frames. Seu tipo de interface irï¿½ mudar de 'video_segmentation' para 'image_segmentation'. As vezes isso ï¿½ de grande ajuda para preparar seus dados de video para um modelo de visï¿½o computacional.",
-  "transform-video-keyframes-dialog-explanation-warning": "Vocï¿½ precisa rotular alguns frames para usar isso.",
-  "universal-data-viewer-interface-warning": "Essa interface nï¿½o foi estabelecidade de forma apropriada, tente selecionar uma interface na aba de configuraï¿½ï¿½o.",
-  "setup-project": "Projeto de confuguraï¿½ï¿½o"
+  "transform-video-frames-to-images-dialog-explanation-text": "Essa trnasformação irá converter suas amostras que referenciam um frame de video em uma imagem. Isso pode ser útil para alguns passos anteriores à criação de modelo. Você pode apenas converter videos que estão baixados em seu computador. Aviso: Isso pode demorar um pouco.",
+  "transform-video-keyframes-dialog-explanation-text": "Essa operação irá converter os frames do video em uma imagem individual segmentada em frames. Seu tipo de interface irá mudar de 'video_segmentation' para 'image_segmentation'. As vezes isso é de grande ajuda para preparar seus dados de video para um modelo de visão computacional.",
+  "transform-video-keyframes-dialog-explanation-warning": "Você precisa rotular alguns frames para usar isso.",
+  "universal-data-viewer-interface-warning": "Essa interface não foi estabelecidade de forma apropriada, tente selecionar uma interface na aba de configuração.",
+  "setup-project": "Projeto de confuguração"
 }
