Fix invalid characters in portuguese translation

--- a/src/i18n/locales/pt-br/translation.json
+++ b/src/i18n/locales/pt-br/translation.json
@@ -1,60 +1,60 @@
 {
-  "starting-page-download-version": "Baixar Vers„o",
+  "starting-page-download-version": "Baixar Vers√£o",
   "download": "Baixar",
   "download-json": "Baixar JSON",
   "download-csv": "Baixar CSV",
-  "universaldatatool-description": "Rotulador de dados de cÛdigo aberto",
+  "universaldatatool-description": "Rotulador de dados de c√≥digo aberto",
   "new-file": "Novo arquivo",
   "start-from-template": "Iniciar apartir de um modelo",
   "open-file": "Abrir arquivo",
-  "open-collaborative-session": "Abrir sess„o colaborativa",
-  "add-authentication": "Adicionar autenticaÁ„o",
+  "open-collaborative-session": "Abrir sess√£o colaborativa",
+  "add-authentication": "Adicionar autentica√ß√£o",
   "create-training-course": "Criar um curso de treinamento",
   "no-recent-files": "Sem arquivos recentes",
   "downloading-and-installing-udt": "Baixando e instalando o UDT",
   "labeling-images": "Rotulando imagens",
-  "start-page-about-first-paragraph": "O Universal Data Tool (UDT) È uma ferramenta web ou baix·vel de cÛdigo aberto para rotulaÁ„o de dados para uso em aprendizado de m·quina ou em processamento de sistemas.",
-  "start-page-about-second-paragraph": "O Universal Data Tool tem suporte para vis„o computacional, fluxo de trabalho para processamento de linguagem natural (incluindo reconhecimento de entidade nomeada e transcriÁ„o de audio).",
+  "start-page-about-first-paragraph": "O Universal Data Tool (UDT) √© uma ferramenta web ou baix√°vel de c√≥digo aberto para rotula√ß√£o de dados para uso em aprendizado de m√°quina ou em processamento de sistemas.",
+  "start-page-about-second-paragraph": "O Universal Data Tool tem suporte para vis√£o computacional, fluxo de trabalho para processamento de linguagem natural (incluindo reconhecimento de entidade nomeada e transcri√ß√£o de audio).",
   "the-udt-uses-an": "O UDT usa uma",
-  "start-page-about-third-paragraph": "que pode ser facilmente lido por programas como um conjunto de dados verdadeiros para algoritmos de aprendizado de m·quina.",
+  "start-page-about-third-paragraph": "que pode ser facilmente lido por programas como um conjunto de dados verdadeiros para algoritmos de aprendizado de m√°quina.",
   "open-a-template": "Abrir um modelo",
   "to-see-how-the-udt-could-work-for-your-data": "para ver como o UDT pode trabalhar com seus dados.",
   "edit-json": "Editar JSON",
-  "clear-labels": "Limpar todos os rÛtulos",
+  "clear-labels": "Limpar todos os r√≥tulos",
   "telemetry": "Telemetria",
-  "custom-collaboration-server": "Servidor de colaboraÁ„o personalizado",
-  "label-help": "Ajuda com RÛtulo",
-  "label-help-api-key": "Ajudo com a chave da API do rÛtulo",
+  "custom-collaboration-server": "Servidor de colabora√ß√£o personalizado",
+  "label-help": "Ajuda com R√≥tulo",
+  "label-help-api-key": "Ajudo com a chave da API do r√≥tulo",
   "an-error-has-occurred": "Ocorreu um erro",
-  "sample-brushes": "PincÈis de amostra",
+  "sample-brushes": "Pinc√©is de amostra",
   "complete": "Completo",
   "review": "Revisar",
   "collaborate": "Colaborar",
-  "join-a-session": "Entrar em uma sess„o",
-  "leave-session": "Sair da sess„o",
-  "next": "PrÛximo",
-  "configure-3d-explanation-text-part-1": "Ei, isso ainda n„o est· disponÌvel, mas se vocÍ gostaria dessa funcionalidade for favor deixe nos saber deixando um gostei",
-  "github-issue": "Quest„o no GitHub",
+  "join-a-session": "Entrar em uma sess√£o",
+  "leave-session": "Sair da sess√£o",
+  "next": "Pr√≥ximo",
+  "configure-3d-explanation-text-part-1": "Ei, isso ainda n√£o est√° dispon√≠vel, mas se voc√™ gostaria dessa funcionalidade for favor deixe nos saber deixando um gostei",
+  "github-issue": "Quest√£o no GitHub",
   "add-new-field": "Adicionar novo campo",
   "remove-field": "Remover campo",
-  "preview": "PrÈ-visualizar",
+  "preview": "Pr√©-visualizar",
   "add-input": "Adicionar entrada",
   "text-input": "Texto de entrada",
   "exclusive-choice": "Escolha exclusiva",
   "drop-down-autocomplete": "Drop-down / Auto completar",
-  "multiple-item-dropdown-autocomplete": "Drop-down v·rios itens / Auto completar",
-  "download-urls-dialog": "Essa transformaÁ„o ir· baixar todas urls de sua amostra para seu computador e muda o caminho de arquivos para nome de arquivo. Geralmente essa n„o È uma boa ideia caso vocÍ queria trabalhar em colaboraÁ„o com outras pessoas, mas isso ser· muito ˙til se vocÍ quiser construir um modelo.",
+  "multiple-item-dropdown-autocomplete": "Drop-down v√°rios itens / Auto completar",
+  "download-urls-dialog": "Essa transforma√ß√£o ir√° baixar todas urls de sua amostra para seu computador e muda o caminho de arquivos para nome de arquivo. Geralmente essa n√£o √© uma boa ideia caso voc√™ queria trabalhar em colabora√ß√£o com outras pessoas, mas isso ser√° muito √∫til se voc√™ quiser construir um modelo.",
   "no-recent-items": "Sem itens recentes",
   "explore-more": "Explorar mais",
   "reopen-google-drive-picker": "Reabrir selecionador do Google drive",
-  "import-from-google-drive-explanation-text": "Tenha certeza que seus arquivos do google drive est„o v·lidos atravÈs do link",
-  "import-from-google-drive-explanation-bold-text": "Se vocÍ achar melhor n„o, os arquivos n„o ir„o desaparecer quanto vocÍ fizer a rotulaÁ„o",
+  "import-from-google-drive-explanation-text": "Tenha certeza que seus arquivos do google drive est√£o v√°lidos atrav√©s do link",
+  "import-from-google-drive-explanation-bold-text": "Se voc√™ achar melhor n√£o, os arquivos n√£o ir√£o desaparecer quanto voc√™ fizer a rotula√ß√£o",
   "select-video-quality": "Selecione a qualidade de video",
   "desktop-only": "Apenas para desktop",
-  "auth-must-be-configured": "AutenticaÁ„o precisa ser configurada",
+  "auth-must-be-configured": "Autentica√ß√£o precisa ser configurada",
   "must-be-signed-in": "Precisa estar logado",
   "paste-urls": "Colar URLs",
-  "files-from-directory": "Arquivos de diretÛrio",
+  "files-from-directory": "Arquivos de diret√≥rio",
   "import-text-snippets": "Importar trechos de texto",
   "import-toy-dataset": "Importar conjunto de dados de brinquedo",
   "import-from": "Importar de",
@@ -64,18 +64,18 @@
   "name": "Nome",
   "type": "Tipo",
   "size": "Tamanho",
-  "actions": "AÁıes",
+  "actions": "A√ß√µes",
   "import": "Importar",
   "sign-in": "Cadastrar",
   "complete-sign-up": "Completar cadastro",
   "complete-your-sign-up": "Complete seu cadastro",
-  "transform-local-files-to-web-urls-explanation": "Essa transformaÁ„o ir· enviar suas amostras locais para a nuvem. Aviso: Isso pode demorar um pouco.",
+  "transform-local-files-to-web-urls-explanation": "Essa transforma√ß√£o ir√° enviar suas amostras locais para a nuvem. Aviso: Isso pode demorar um pouco.",
   "convert-video-keyframes-to-samples": "Converter frames de video em amostras",
   "transform-local-files-to-web-urls": "Transformar arquivos locais em web URLs",
   "convert-video-frames-to-images": "Converter frames de video em imagens",
-  "transform-video-frames-to-images-dialog-explanation-text": "Essa trnasformaÁ„o ir· converter suas amostras que referenciam um frame de video em uma imagem. Isso pode ser ˙til para alguns passos anteriores ‡ criaÁ„o de modelo. VocÍ pode apenas converter videos que est„o baixados em seu computador. Aviso: Isso pode demorar um pouco.",
-  "transform-video-keyframes-dialog-explanation-text": "Essa operaÁ„o ir· converter os frames do video em uma imagem individual segmentada em frames. Seu tipo de interface ir· mudar de 'video_segmentation' para 'image_segmentation'. As vezes isso È de grande ajuda para preparar seus dados de video para um modelo de vis„o computacional.",
-  "transform-video-keyframes-dialog-explanation-warning": "VocÍ precisa rotular alguns frames para usar isso.",
-  "universal-data-viewer-interface-warning": "Essa interface n„o foi estabelecidade de forma apropriada, tente selecionar uma interface na aba de configuraÁ„o.",
-  "setup-project": "Projeto de confuguraÁ„o"
+  "transform-video-frames-to-images-dialog-explanation-text": "Essa trnasforma√ß√£o ir√° converter suas amostras que referenciam um frame de video em uma imagem. Isso pode ser √∫til para alguns passos anteriores √† cria√ß√£o de modelo. Voc√™ pode apenas converter videos que est√£o baixados em seu computador. Aviso: Isso pode demorar um pouco.",
+  "transform-video-keyframes-dialog-explanation-text": "Essa opera√ß√£o ir√° converter os frames do video em uma imagem individual segmentada em frames. Seu tipo de interface ir√° mudar de 'video_segmentation' para 'image_segmentation'. As vezes isso √© de grande ajuda para preparar seus dados de video para um modelo de vis√£o computacional.",
+  "transform-video-keyframes-dialog-explanation-warning": "Voc√™ precisa rotular alguns frames para usar isso.",
+  "universal-data-viewer-interface-warning": "Essa interface n√£o foi estabelecidade de forma apropriada, tente selecionar uma interface na aba de configura√ß√£o.",
+  "setup-project": "Projeto de confugura√ß√£o"
 }
