more french translations

--- a/src/i18n/locales/en/translation.json
+++ b/src/i18n/locales/en/translation.json
@@ -3,7 +3,7 @@
   "download": "Download",
   "download-json": "Download JSON",
   "download-csv": "Download CSV",
-  "universaldatatool-description": "Open-Source Data Labeling",
+  "universaldatatool-description": "Open-Source Data Labeling tool",
   "new-file": "New File",
   "start-from-template": "Start from Template",
   "open-file": "Open File",
@@ -79,5 +79,20 @@
   "universal-data-viewer-interface-warning": "This interface hasn't been set up properly, try selecting an interface in the 'Setup' tab.",
   "setup-project": "Setup Project",
   "other-formats": "Other Formats",
-  "import-from-coco": "Import from COCO"
+  "import-from-coco": "Import from COCO",
+  "remember-me": "Remember me",
+  "login-with": "Login with",
+  "about": "About",
+  "start": "Start",
+  "recent": "Recent",
+  "help": "Help",
+  "github-repository": "Github repository",
+  "youtube-channel": "Youtube channel",
+  "logout": "Logout",
+  "username": "Username",
+  "password": "Password",
+  "star": "Star",
+  "check-this-wiki": "Check this wiki",
+  "guide-to-set-up-cognito": "guide for setting up AWS Cognito with the Universal Data Tool",
+  "close": "Close"
 }
