--- a/src/i18n/locales/fr/translations.json
+++ b/src/i18n/locales/fr/translations.json
@@ -1,7 +1,7 @@
 {
   "starting-page-download-version": "Version à télécharger",
   "download": "Télécharger",
-  "universaldatatool-description": "Étiquetage des données à source ouverte",
+  "universaldatatool-description": "Outil d'étiquetage des données open source",
   "new-file": "Nouveau dossier",
   "start-from-template": "Partir du modèle",
   "open-file": "Dossier public",
@@ -11,9 +11,9 @@
   "no-recent-files": "Aucun dossier récent",
   "downloading-and-installing-udt": "Téléchargement et installation d'UDT",
   "labeling-images": "Étiquetage des images",
-  "start-page-about-first-paragraph": "The Universal Data Tool (UDT) est un outil web ou téléchargeable à code source ouvert pour l'étiquetage des données destinées à être utilisées dans l'apprentissage machine ou les systèmes de traitement des données.",
-  "start-page-about-second-paragraph": " L'Universal Data Tool prend en charge les flux de travail de la vision par ordinateur, du traitement du langage naturel (y compris la reconnaissance d'entités nommées et la transcription audio).",
-  "the-udt-uses-an": "L'UDT utilise un",
+  "start-page-about-first-paragraph": "Universal Data Tool (UDT) est un outil web ou téléchargeable à code open source pour l'étiquetage des données destinées à être utilisées dans l'apprentissage machine ou les systèmes de traitement des données.",
+  "start-page-about-second-paragraph": "UDT prend en charge les flux de travail de la vision par ordinateur, du traitement du langage naturel (y compris la reconnaissance d'entités nommées et la transcription audio).",
+  "the-udt-uses-an": "UDT utilise un",
   "start-page-about-third-paragraph": "qui peut être facilement lu par les programmes comme un ensemble de données de base pour les algorithmes d'apprentissage machine.",
   "open-a-template": "Ouvrir un modèle",
   "to-see-how-the-udt-could-work-for-your-data": "pour voir comment l'UDT pourrait fonctionner pour vos données.",
@@ -61,7 +61,7 @@
   "size": "Taille",
   "actions": "Actions",
   "import": "Importer",
-  "sign-in": "S'identifier",
+  "sign-in": "Se connecter",
   "complete-sign-up": "Compléter l'inscription",
   "complete-your-sign-up": "Complétez votre inscription",
   "transform-local-files-to-web-urls-explanation": "Cette transformation téléchargera vos échantillons locaux dans le nuage Remarque : Cela peut prendre un certain temps.",
@@ -72,5 +72,20 @@
   "transform-video-keyframes-dialog-explanation-text": "Cette opération permettra de convertir les images clés d'une vidéo en images individuelles de segmentation d'images. Votre type d'interface passera de 'video_segmentation' à 'image_segmentation'. Cette opération est parfois utile lors de la préparation des données vidéo pour un modèle de vision par ordinateur.",
   "transform-video-keyframes-dialog-explanation-warning": "Pour l'utiliser, vous devez étiqueter certaines images clés.",
   "universal-data-viewer-interface-warning": "Cette interface n'a pas été configurée correctement, essayez de sélectionner une interface dans l'onglet 'Configuration'.",
-  "setup-project": "Projet de mise en place"
+  "setup-project": "Projet de mise en place",
+  "remember-me": "Se souvenir de moi",
+  "login-with": "Authentifier avec",
+  "about": "À propos",
+  "start": "Commencer",
+  "recent": "Récent",
+  "help": "Aide",
+  "github-repository": "Dépôt Github",
+  "youtube-channel": "Chaîne Youtube",
+  "logout": "Déconnexion",
+  "username": "Nom d'utilisateur",
+  "password": "Mot de passe",
+  "star": "Étoile",
+  "check-this-wiki": "Voyez ce",
+  "guide-to-set-up-cognito": "guide pour configurer AWS Cognito avec Universal Data Tool",
+  "close": "Fermer"
 }
