--- a/src/i18n/locales/fr/translations.json
+++ b/src/i18n/locales/fr/translations.json
@@ -56,6 +56,10 @@
   "import-text-snippets": "Importer des bribes de texte",
   "import-toy-dataset": "Import Toy Dataset",
   "import-from": "Importation de",
+  "import-from-cognito-s3": "Importer de S3 (Cognito)",
+  "export-to-cognito-s3": "Exporter vers S3 (Cognito)",
+  "import-from-s3": "Importer de S3 (IAM)",
+  "upload-to-s3": "Exporter par S3",
   "name": "Nom",
   "type": "Tapez",
   "size": "Taille",
