--- a/src/i18n/locales/fr/translations.json
+++ b/src/i18n/locales/fr/translations.json
@@ -50,7 +50,7 @@
   "select-video-quality": "Choisir la qualité vidéo",
   "desktop-only": "Bureau uniquement",
   "auth-must-be-configured": "L'authentification doit être configurée",
-  "must-be-signed-in": "Doit être signé",
+  "must-be-signed-in": "Doit être authentifié",
   "paste-urls": "Coller les URL",
   "files-from-directory": "Fichiers du répertoire",
   "import-text-snippets": "Importer des bribes de texte",
@@ -59,7 +59,7 @@
   "import-from-cognito-s3": "Importer de S3 (Cognito)",
   "export-to-cognito-s3": "Exporter vers S3 (Cognito)",
   "import-from-s3": "Importer de S3 (IAM)",
-  "upload-to-s3": "Exporter par S3",
+  "upload-to-s3": "Exporter vers S3",
   "name": "Nom",
   "type": "Tapez",
   "size": "Taille",
