translation of cognito

--- a/src/i18n/locales/en/translation.json
+++ b/src/i18n/locales/en/translation.json
@@ -95,5 +95,29 @@
   "star": "Star",
   "check-this-wiki": "Check this wiki",
   "guide-to-set-up-cognito": "guide for setting up AWS Cognito with the Universal Data Tool",
-  "close": "Close"
+  "close": "Close",
+  "project-name": "Project Name",
+  "projects": "Projects",
+  "export-project": "Export Project",
+  "create-project": "Create Project",
+  "warning-project-exist": "Warning : This project name already exist. If you continue the \n existing project with the same name will be replaced",
+  "has-samples-folder": "Make sure the project has \"samples\" folder",
+  "annotations": "Annotations",
+  "last-modified": "Last Modified",
+  "select-project": "Select Project",
+  "take-samples-from-project": "Take samples from project",
+  "annotation-processing": "Annotation Processing",
+  "keep-both-annotations": "Keep both annotations",
+  "keep-incoming-annotations": "Keep incoming annotations",
+  "keep-current-annotations": "Keep current annotations",
+  "choose-file-type": "Choose file type",
+  "load-image-file": "Load image file",
+  "load-pdf-file": "Load PDF file",
+  "load-text-file": "Load text file",
+  "load-audio-file": "Load audio file",
+  "load-video-file": "Load video file",
+  "assets": "Assets",
+  "has-data-folder": "Make sure the project has \"data\" folder",
+  "load-assets": "Load Assets",
+  "load-annotations": "Load Annotations"
 }
