--- a/src/i18n/locales/fr/translations.json
+++ b/src/i18n/locales/fr/translations.json
@@ -91,5 +91,29 @@
   "star": "Étoile",
   "check-this-wiki": "Voyez ce",
   "guide-to-set-up-cognito": "guide pour configurer AWS Cognito avec Universal Data Tool",
-  "close": "Fermer"
+  "close": "Fermer",
+  "project-name": "Nom du projet",
+  "projects": "Projets",
+  "export-project": "Exporter un projet",
+  "create-project": "Créer un projet",
+  "warning-project-exist": "Avertissement : Le nom de ce projet est préexistant. Si vous continuer, \n le projet existant sera remplacé.",
+  "has-samples-folder": "Assurez-vous que le projet a un répertoire \"samples\"",
+  "annotations": "Annotations",
+  "last-modified": "Dernière modification",
+  "select-project": "Sélectionner un projet",
+  "take-samples-from-project": "Prendre les échantillons du projet",
+  "annotation-processing": "Gestion des annotations",
+  "keep-both-annotations": "Garder tous types d'annotations",
+  "keep-incoming-annotations": "Garder les nouvelles annotations",
+  "keep-current-annotations": "Garder les anciennes annotations",
+  "choose-file-type": "Choisir le type de fichier de données",
+  "load-image-file": "Télécharger les fichiers d'images",
+  "load-pdf-file": "Télécharger les fichiers PDFs",
+  "load-text-file": "Télécharger les fichiers textes",
+  "load-audio-file": "Télécharger les fichiers audio",
+  "load-video-file": "Télécharger les fichiers vidéo",
+  "assets": "Fichiers de données",
+  "has-data-folder": "Assurez-vous que le projet a un répertoire \"data\"",
+  "load-assets": "Charger les fichiers de données",
+  "load-annotations": "Charger les annotations"
 }
